Add link to app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Tip Tracker</h1>
       <h2 class="project-tagline">Keep tabs on just how much you're spending on your nights out.</h2>
-      <a href="" class="btn">View on the App Store</a>
+      <a href="https://itunes.apple.com/gb/app/tip-tracker/id1127419776?mt=8" class="btn">View on the App Store</a>
     </section>
 
     <section class="main-content">
