Update for version 2.0

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     <section class="main-content">
       <!-- App Description -->
       <h1>What does it do?</h1>
-      <p>Tip tracker provides you with a simple way of tracking your spending on nights out, as we all know that feeling when you’re waiting on your next pay check to cover living costs after spending a little too much in a month.</p>
+      <p>Tip Tracker provides you with a simple way of tracking your spending on nights out, as we all know that feeling when you’re waiting on your next pay check to cover living costs after spending a little too much in a month.</p>
 
-      <p>Tip Tracker provides 2 main capabilities:
-        <ol>
-          <li>Calculate exactly how much you should tip using the tip slider</li>
-          <li>Fill in the details and save the receipt to your wallet for future reference</li>
-        </ol>
+      <p>Tip Tracker offers the following capabilities:
+        <ul>
+          <li>Calculate the bill total, including any tip, using the tip slider</li>
+          <li>Keep track of your spending on dining out</li>
+          <li>Keep a record of all the different places you've ever been too!</li>
+        </ul>
       </p>
 
-      <p>Keeping track of your dining expenditure will allow you to ensure you’re not overindulging, and see at a glance exactly how much you’ve spent lately.</p>
+      <p>Keeping track of your dining expenditure will allow you to ensure you’re not overindulging, and see at a glance exactly how much you’ve spent lately. <b>And remember all the great (and not so great) places you've ever been too, and exactly where they were!</b></p>
 
       <p>Enjoy the experience of dining out, knowing you’ll still have enough money to spend on the necessities at the end of the month.</p>
 
@@ -36,7 +37,7 @@
 
       <!-- Tutorial for use -->
       <h1>How do I use it?</h1>
-      <h3><b>Step 1</b> - Fill in your bill details</h3>
+      <h3><b>Step 1</b> - Fill in your bill details while your location is automatically retrieved</h3>
       <center>
         <img class="Tutorial-Image" src="Tutorial Screenshots/Step 1 - Add Details.png">
       </center>
@@ -53,22 +54,27 @@
 
       <h3><b>Step 4</b> - See all your saved bills and exactly how much you've spent on dining out</h3>
       <center>
-        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 4 - See all Receipts.png">
+        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 4 - View All Receipts.png">
       </center>
 
-      <h3><b>Step 5</b> - Swipe to delete any old receipts</h3>
+      <h3><b>Step 5</b> - Tap on a receipt to see more details</h3>
       <center>
-        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 5 - Delete Receipts.png">
+        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 5 - View Receipt Details.png">
       </center>
 
-      <h3><b>Step 6</b> - Hit the X to close your wallet</h3>
+      <h3><b>Step 6</b> - Swipe to delete any old receipts</h3>
       <center>
-        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 6 - Close Draw.png">
+        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 6 - Delete Receipts.png">
       </center>
 
-      <h3><b>Step 7</b> - To re-open your wallet at any point hit the folder icon in the upper left corner</h3>
+      <h3><b>Step 7</b> - Hit the X to close your wallet</h3>
       <center>
-        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 7 - Reopen the draw.png">
+        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 7 - Close Wallet.png">
+      </center>
+
+      <h3><b>Step 8</b> - To re-open your wallet at any point hit the folder icon in the upper left corner</h3>
+      <center>
+        <img class="Tutorial-Image" src="Tutorial Screenshots/Step 8 - Re-open Wallet.png">
       </center>
 
       <!-- Footer details -->
